--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movies-db",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Tetiana892.github.io/Movies/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -57,3 +58,4 @@
     "sass": "^1.74.1"
   }
 }
+
